# ansible-piloteer

./: .gitignore  Cargo.toml  LICENSE  README.md  ansible-piloteer.specs  ansible.cfg  piloteer.toml  verify_debug.sh
.github/workflows/: ci.yml  release.yml
ansible_plugin/strategies/: piloteer.py
docs/: ci_cd_integration.md  deep_analysis.md  distributed_mode.md  error_handling.md  getting_started.md  interactive_debugging.md  interface_reference.md  keyboard_shortcuts.md  query_guide.md  reporting.md  session_persistence.md  tracing.md  troubleshooting.md  zipkin_tracing.md
mcp/: server.json
src/: actions.rs  ai.rs  app.rs  auth.rs  clipboard.rs  config.rs  execution.rs  highlight.rs  input.rs  ipc.rs  ipc_handler.rs  lib.rs  main.rs  mcp.rs  plugin.rs  query.rs  quota.rs  repl.rs  report.rs  session.rs  telemetry.rs  tracing.rs  ui.rs
src/ai/: anthropic.rs  google.rs  vertex.rs
src/widgets/: chat.rs  heatmap.rs  json_tree.rs  metrics.rs  mod.rs
tests/: ansible.cfg  app_tests.rs  fake_ansible.py  fake_ansible_failure.py  fake_google.py  fake_openai.py  ipc_test.rs  report_generation_test.rs  repro_freeze.sh  session_test.rs  unreachable_host_test.rs  verbose_log_test.rs
tests/e2e/: Dockerfile.alpine  Dockerfile.centos  Dockerfile.nixos  Dockerfile.ubuntu  core_ops.yml  deploy_full_stack.yml  docker-compose.yml  inventory.ini  large_logs.yml  setup_e2e.sh  test-roadmap.md  test_playbook.yml  ux_demo.yml  verification_playbook.yml
tests/playbooks/: drift_demo.yml  (+4 more)
tools/: Dockerfile.test  build_release.sh  install.sh  run_tests.sh  test_playbook.yml
(+18 files in other folders)
