[package]
name = "ansible-piloteer"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
config = "0.14"
syntect = "5.2"
clap = { version = "4.5", features = ["derive"] }
oauth2 = "4.4"
webbrowser = "0.8"
url = "2.5"
chrono = { version = "0.4.43", features = ["serde"] }
arboard = "3.6.1"
flate2 = "1.1.9"
jmespath = "0.5.0"
serde_yaml = "0.9.34"
rustyline = "17.0.2"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-rustls"] }
regex = "1.12.3"
tempfile = "3.24.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
